# PROJETO_IC

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
data/interim/: comparacao_metodos.csv  dados_organizados.csv  faltantes_resumo.csv  melhor_metodo_por_variavel.csv  outliers_classificacao.csv  outliers_confirmados.csv  outliers_marcados_long.csv  outliers_valores_por_metodo.csv
docs/: decisoes_de_projeto.md  dicionario_de_dados.md  metodologia.md  resumo_em_camadas.md
notebooks/: 00_visao_geral.ipynb  01_carga_e_inspecao.ipynb  02_pre_processamento.ipynb  03_imputacao.ipynb  04_analise_exploratoria.ipynb  05_outliers_iqr_vs_ensemble.ipynb  06_kmeans_clustering.ipynb  07_random_forest.ipynb  08_isolation_forest.ipynb  09_validacao_consolidada.ipynb  10_relatorio_final.ipynb
reports/: relatorio_resultados.md  relatorio_resultados_auto.md
reports/tables/: contamination_calibracao.csv  iforest_anomalias.csv  kmeans_perfil.csv  kmeans_varredura.csv  rf_importancias.csv  rf_matriz_confusao.csv  rf_metricas.csv  validacao_imputacao.csv  validacao_imputacao_kmeans.csv
scripts/: calibrar_contamination.py  comparar_metodos_outliers.py  extrair_dados.py  gerar_notebooks.py  gerar_relatorio_pdf.py  melhor_metodo_por_variavel.py  plot_missing.py  plot_outliers.py  plot_outliers_confirmados.py  plot_outliers_por_metodo.py  run_evaluate.py  run_outliers.py  run_preprocess.py  run_train.py  tabela_outliers_por_metodo.py
src/: config.py
tests/: conftest.py  test_load.py  test_missing.py  test_models.py  test_outliers.py
(+10 files in other folders)
