[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto-pcj-ml"
version = "0.1.0"
description = "Aplicação de Machine Learning para análise da qualidade da água na bacia do PCJ (SEMAE 2009–2024)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Guilherme Gramuglia Betta" },
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyod>=2.0",
    "joblib>=1.4",
    "missingno>=0.5",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "black>=24.0",
    "nbstripout>=0.7",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "nbformat>=5.10",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]
